[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/grass.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Coin/Coin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Level.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/Coin.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/Hit.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Powerup.wav" type="AudioStream" id=9]
[ext_resource path="res://Nodes/Powerup/Powerup.tscn" type="PackedScene" id=10]
[ext_resource path="res://Nodes/Cactus/Cactus.tscn" type="PackedScene" id=11]

[node name="Main" type="Node"]
script = ExtResource( 3 )
coin = ExtResource( 2 )
powerup = ExtResource( 10 )
playtime = 30

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="CoinContainer" type="Node" parent="."]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Audio" type="Node" parent="."]

[node name="CoinSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 7 )

[node name="LevelSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 6 )

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 9 )

[node name="EndSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 8 )

[node name="Cactus" parent="." instance=ExtResource( 11 )]
position = Vector2( 272, 136 )

[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="powerup" from="Player" to="." method="_on_Player_powerup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
